@@ -1,0 +1,5 @@
+
+# Csharp folders
+bin/
+obj/
+.vs/
